<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.composer.loan.create.LoanCreateActivity">

    <data>

        <variable
            name="offer"
            type="com.example.banking.data.model.Offer" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dp24">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:textAppearance="@style/App.TextAppearance.Description" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:textAppearance="@style/App.TextAppearance.Description" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etNationalIdNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/national_id_number"
                    android:inputType="numberDecimal"
                    android:textAppearance="@style/App.TextAppearance.Description" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spProvinces"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="@dimen/dp4"
                    android:textAppearance="@style/App.TextAppearance.Description" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spMonthlyIncome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/monthly_income"
                    android:paddingTop="4dp"
                    android:paddingBottom="@dimen/dp4"
                    android:textAppearance="@style/App.TextAppearance.Description" />>
            </LinearLayout>
        </ScrollView>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnDone"
            style="@style/App.TextAppearance.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp16"
            android:text="@string/done_label"
            app:layout_constraintBottom_toBottomOf="parent" />

    </android.support.constraint.ConstraintLayout>

</layout>